keenan now just put the header links and footers on the form pages to carry over styling

--- a/FAQ.html
+++ b/FAQ.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="vendors/nice-select/css/nice-select.css">
 	<link rel="stylesheet" href="vendors/animate-css/animate.css">
 	<link rel="stylesheet" href="vendors/flaticon/flaticon.css">
+	<link rel="stylesheet" href="css/style.css">
 	<!-- main css -->
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -26,6 +27,7 @@
 	<header class="header_area">
 		<div class="main_menu">
 			<nav class="navbar navbar-expand-lg navbar-light">
+				<img src="img/maxlogo.png" style="margin-left:7vh;width:20vh"alt="">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
 					<a class="navbar-brand" href="index.html"><img src="img/logo.png" alt=""></a>
@@ -40,20 +42,8 @@
 						<ul class="nav navbar-nav menu_nav justify-content-end">
 							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
 							<li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li>
-							<li class="nav-item submenu dropdown active">
-								<a class="nav-link" href="#">Portfolio</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-									<li class="nav-item"><a class="nav-link" href="portfolio-details.html">Portrfolio Details</a>
-								</ul>
-							</li>
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-								 aria-expanded="false">Pages</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="elements.html">Elements</a>
-								</ul>
-							</li>
+							<li class="nav-item active"><a class="nav-link" href="faq.html">FAQ</a></li>
+							<li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
 								 aria-expanded="false">Blog</a>
@@ -76,18 +66,13 @@
 		<div class="banner_inner d-flex align-items-center">
 			<div class="container">
 				<div class="banner_content text-right">
-					<div class="page_link">
-						<a href="index.html">Home</a>
-						<a href="portfolio.html">Portfolio</a>
-						<a href="portfolio-details.html">Details</a>
-					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<!--================ End Portfolio Banner Area =================-->
+	<!--================ End FAQ Banner Area =================-->
 
-	<!--================ Start Portfolio Details Area =================-->
+	<!--================ Start FAQ Details Area =================-->
 	<section class="portfolio_details_area section_gap">
 		<div class="container">
 			<div class="portfolio_details_inner">
@@ -103,74 +88,73 @@
 						</div>
 					</div>
 				</div>
-				<p>Do you Provide fulfillment services?
+				<h3 style="text-align:center;">Do you Provide fulfillment services?</h3><p>
 					MPL does not Provide Per Product Fulfillment but, can ship full build load to any destination for fulfillment.</p>
 
-				<p>How is Freight charged?
+				<h3 style="text-align:center;">How is Freight charged?</h3><p></h3><p>
 Freight is F.O.B. our manufacturing facilities in Chicago, IL.
 Shipping can be arranged by our shipping department or by your company.
 Our shipping department will contact freight companies for a competitive price for your shipment.</p>
 
-	<p>Does MPL Require Deposit for Order?
+	<h3 style="text-align:center;">Does MPL Require Deposit for Order?</h3><p></h3><p>
 Yes. MPL requires a 50% non-refundable deposit on your order.
 Once we have received your deposit, our purchasing department will order raw materials for your product.
 The remaining balance is due once we have finished production and your order is ready to ship.
 We will calculate exactly how many pieces were made and factor in shipping into the remaining balance.</p>
 
-<p>Can I Ship my Packaging to MPL?
+<h3 style="text-align:center;">Can I Ship my Packaging to MPL?</h3><p>
 Absolutely! When you order your packaging,
 we recommend having it shipped directly to MPL to avoid paying a double shipment fee.</p>
 
-<p>Does MPL Provide Labels?
+<h3 style="text-align:center;">Does MPL Provide Labels?</h3><p>
 Yes, we have created great relationships with reliable label companies for short lead time and fast turn-around time.
 MPL can order labels on your behalf or refer you to a supplier.</p>
 
-<p>
-Does MPL provide Packaging?
+<h3 style="text-align:center;">
+Does MPL provide Packaging?</h3><p>
 Yes, we have created great relationships with reliable packaging companies for short lead time and fast turn-around time.
 MPL can order packaging on your behalf or refer you to a supplier.</p>
 
-<p>Does MPL do animal testing?
+<h3 style="text-align:center;">Does MPL do animal testing?</h3><p>
 No. MPL does not do animal testing.
 We are proud to be a cruelty-free contract manufacturer and lab.</p>
 
-<p>
-What are the types fo stability testing you do?
+<h3 style="text-align:center;">
+What are the types fo stability testing you do?</h3><p>
 Upon product approval, the customer has the option of running a Package Stability and Compatibility Test.
 For MPL to guarantee the stability of the product, we require that this test be done with using the exact packaging that will be used to go to market.
 These tests will evaluate the product’s integrity and cohesion once introduced to the specific packaging which will be used by the customer. The Research and Development team will re-create the customer’s approved formula, exactly as it is approved, and will run six (seven) tests inside the exact packaging component which the customer chooses for his or her product.</p>
 
-<p>
-Are R&D deposits Refundable?
+<h3 style="text-align:center;">
+Are R&D deposits Refundable?</h3><p>
 
 No. R&D deposits cover the cost of time spent formulating your product, ordering samples for your formula, and creating bench samples.
 A significant portion of your R&D fees will be credited towards your first order.</p>
 
-<p>Do you offer facility tours?
+<h3 style="text-align:center;">Do you offer facility tours?</h3><p>
 Yes! We enjoy meeting with customers face to face. We ask that you contact our offices to schedule a meeting to meet with our experts and see our facilities.</p>
 
-<p>Does MPL Formulate products for export?
+<h3 style="text-align:center;">Does MPL Formulate products for export?</h3><p>
 Yes. Each country has varying laws and guidelines for importing products. At MPL, we have created products for export to over 35 different countries. We will use our experience and knowledge to navigate the paperwork and certificates required for export.</p>
 
-<p>Does MPL Sign a Non-Disclosure agreement?(NDA)
+<h3 style="text-align:center;">Does MPL Sign a Non-Disclosure agreement?</h3><p>(NDA)
 Yes. MPL will provide you with our NDA which protects the client (you) and manufacturer (MPL)</p>
 
-<p>Will I receive a copy of the approved formula?
+<h3 style="text-align:center;">Will I receive a copy of the approved formula?</h3><p>
 MPL maintains ownership of all formulations. However, we do enter into agreements to enable our customers to have exclusive use of specific formulations. We do not share formulations across customers.
 Complete formulas may be purchased from MPL Laboratories. Pricing is determined on a per-formula basis.</p>
 
-<p>Once I place my production order, when can I expect my product to ship?
+<h3 style="text-align:center;">Once I place my production order, when can I expect my product to ship?</h3><p>
 Once you have placed an order, we will send you an invoice for a 50% deposit.
 After we have received your deposit, our ordering department will begin to place orders for raw materials.
 Lead times of ingredients vary, depending on location of ingredient, whether or not the vendor has the ingredient in stock, and more. Sometimes ingredients can take up to 8 weeks to be shipped to our warehouse. We require that all components of packaging be sent to our warehouse prior to going into production. Once all ingredients and packaging components have been sent to our warehouse, we schedule your product for compounding and production. We ask that all MPL clients give a 4 week lead time before their product goes into production, allowing time for all ingredients to be shipped in. If it is possible for your product to go into production earlier, we will do so.</p>
 
-<p>when your next order will be placed. Once we know this, we can contact our ingredient vendors and ask them to set aside a certain amount to prevent any back-orders, helping get your ingredients faster for future orders.</p>
 
-<p>What are your minimums for Custom Formulation?
+<h3 style="text-align:center;">What are your minimums for Custom Formulation?</h3><p>
 The minimum quantity is 5000 pieces for Custom formulation orders. The minimum quantity is 3500 pieces for Stock formulation orders.
 Sometimes we are able to accommodate smaller production runs but are limited by the type of product and the availability of raw materials.</p>
 
-<p>How Much will my product cost per unit?
+<h3 style="text-align:center;">How Much will my product cost per unit?</h3><p>
 This answer is entirely up to you.
 Before beginning the R&D phase, we ask that you provide use with your cost per piece.
 The answer to this allows us to give a budget to our R&D team for your formula.
@@ -187,29 +171,31 @@ Our R&D team will work backwards from there when deciding which ingredients and 
 			</div>
 		</div>
 	</section>
-	<!--================ Start Portfolio Details Area =================-->
+	<!--================ Start FAQ Details Area =================-->
 
-	<!--================Footer Area =================-->
+	<!--================ Start Footer Area =================-->
 	<footer class="footer_area section_gap">
 		<div class="container">
 			<div class="row footer_inner justify-content-center">
 				<div class="col-lg-6 text-center">
 					<aside class="f_widget social_widget">
 						<div class="f_logo">
-							<img src="img/logo.png" alt="">
+							<img src="img/maxlogo.png" style="width:20vh"alt="">
 						</div>
 						<div class="f_title">
-							<h4>Follow Me</h4>
+							<h4>Follow Us</h4>
 						</div>
 						<ul class="list">
 							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-							<li><a href="#"><i class="fa fa-behance"></i></a></li>
+							<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 						</ul>
 					</aside>
 					<div class="copyright">
-						<p><font size="2">This  site was made by KJH Technology</p>
+						<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Developed by KJH Technologies</a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+						</p>
 					</div>
 				</div>
 			</div>
@@ -231,7 +217,7 @@ Our R&D team will work backwards from there when deciding which ingredients and 
 	<script src="js/jquery.ajaxchimp.min.js"></script>
 	<script src="js/mail-script.js"></script>
 	<!--gmaps Js-->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?</h3><p>key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
 	<script src="js/gmaps.min.js"></script>
 	<script src="js/theme.js"></script>
 </body>
