--- a/about-us.html
+++ b/about-us.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" href="vendors/animate-css/animate.css">
 	<!-- main css -->
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="about-us.css"
 </head>
 
 <body>
@@ -25,6 +26,7 @@
 	<header class="header_area">
 		<div class="main_menu">
 			<nav class="navbar navbar-expand-lg navbar-light">
+				<img src="img/maxlogo.png" style="margin-left:7vh;width:20vh"alt="">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
 					<a class="navbar-brand" href="index.html"><img src="img/logo.png" alt=""></a>
@@ -39,20 +41,8 @@
 						<ul class="nav navbar-nav menu_nav justify-content-end">
 							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
 							<li class="nav-item active"><a class="nav-link" href="about-us.html">About</a></li>
-							<li class="nav-item submenu dropdown">
-								<a class="nav-link" href="#">Portfolio</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-									<li class="nav-item"><a class="nav-link" href="portfolio-details.html">Portrfolio Details</a>
-								</ul>
-							</li>
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-								 aria-expanded="false">Pages</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="elements.html">Elements</a>
-								</ul>
-							</li>
+							<li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+							<li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
 								 aria-expanded="false">Blog</a>
@@ -74,13 +64,6 @@
 	<section class="banner_area">
 		<div class="banner_inner d-flex align-items-center">
 			<div class="container">
-				<div class="banner_content text-right">
-					<h1>About Us</h1>
-					<div class="page_link">
-						<a href="index.html">Home</a>
-						<a href="about-us.html">About</a>
-					</div>
-				</div>
 			</div>
 		</div>
 	</section>
@@ -90,27 +73,34 @@
 	<section class="about-area section_gap gray-bg">
 		<div class="container">
 			<div class="row align-items-center justify-content-between">
-				<div class="col-lg-5 about-left">
-					<img class="img-fluid" src="img/about-img.png" alt="">
-				</div>
-				<div class="col-lg-6 col-md-12 about-right">
-					<div class="main-title text-left">
-						<h1>about myselt</h1>
+				<div class="col-md-12 about-center">
+					<div class="main-title text-center">
+						<h1>About us</h1>
 					</div>
-					<div class="mb-50 wow fadeIn" data-wow-duration=".8s">
+					<div align="left"class="mb-50 wow fadeIn" data-wow-duration=".8s">
 						<p>
-							inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards
-							especially in the
-							workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate
-							behavior
-							is often laughed. inappropriate behavior is often laughed off as “boys will be boys,” women face higher.
-						</p>
-						<p>That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is
-							often
-							laughed.
+	Max Private Label is a leading custom manufacturer specializing in premiere Hair care, Skin
+care &amp; Personal care products. Our clients include retailers, spas, salons &amp; most digital
+marketplaces also individuals who want to develop their own line of skin care or personal care
+products.
+Whether you want to enhance an existing personal care product or have an idea for a new
+product we can help. We have developed many best selling products worldwide and some are
+featured in Amazon, Target, and Walmart and many specialty spas.
+Our goal is to create unique, safe and eco-friendly products with a reliable turnkey
+manufacturing operation.
+Developing a great personal care product is a labor intensive process which takes up a lot of
+time, resources and expertise. This is why most manufacturing companies usually require large
+minimum order quantities for custom label products to make the process worthwhile for their
+business. This business model leaves out many brands that are just getting started or those that
+don’t want to commit to a large investment without first testing the marketplace.
+We Max Private Label are proud to service the small, medium to large sized companies &amp;
+brands. We have helped numerous brands become super-successful from the idea stage. We look
+forward to helping you do the same.
+When freshly formulating your products in our Lab, we are committed to selecting natural,
+environmentally-friendly and active ingredients, wherever possible, and are continuously seeking
+new and innovative “green” ingredients.
 						</p>
 					</div>
-					<a href="#" class="primary-btn">More Info</a>
 				</div>
 			</div>
 		</div>
@@ -127,7 +117,6 @@
 						<div class="single_testimonial">
 							<div class="testimonial_head">
 								<img src="img/quote.png" alt="">
-								<h4>Fanny Spencer</h4>
 								<div class="review">
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
@@ -137,15 +126,14 @@
 								</div>
 							</div>
 							<div class="testimonial_content">
-								<p>As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If you think about
-									it, you travel across her face</p>
+								<p>testimonial</p>
 							</div>
 						</div>
 
 						<div class="single_testimonial">
 							<div class="testimonial_head">
 								<img src="img/quote.png" alt="">
-								<h4>Fanny Spencer</h4>
+								<h4>testimonial</h4>
 								<div class="review">
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
@@ -155,15 +143,14 @@
 								</div>
 							</div>
 							<div class="testimonial_content">
-								<p>As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If you think about
-									it, you travel across her face</p>
+								<p></p>
 							</div>
 						</div>
 
 						<div class="single_testimonial">
 							<div class="testimonial_head">
 								<img src="img/quote.png" alt="">
-								<h4>Fanny Spencer</h4>
+								<h4>testimonial</h4>
 								<div class="review">
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
@@ -173,15 +160,14 @@
 								</div>
 							</div>
 							<div class="testimonial_content">
-								<p>As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If you think about
-									it, you travel across her face</p>
+								<p></p>
 							</div>
 						</div>
 
 						<div class="single_testimonial">
 							<div class="testimonial_head">
 								<img src="img/quote.png" alt="">
-								<h4>Fanny Spencer</h4>
+								<h4>testimonial</h4>
 								<div class="review">
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
@@ -191,8 +177,7 @@
 								</div>
 							</div>
 							<div class="testimonial_content">
-								<p>As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If you think about
-									it, you travel across her face</p>
+								<p></p>
 							</div>
 						</div>
 					</div>
@@ -224,21 +209,20 @@
 				<div class="col-lg-6 text-center">
 					<aside class="f_widget social_widget">
 						<div class="f_logo">
-							<img src="img/logo.png" alt="">
+							<img src="img/maxlogo.png" style="width:20vh"alt="">
 						</div>
 						<div class="f_title">
-							<h4>Follow Me</h4>
+							<h4>Follow Us</h4>
 						</div>
 						<ul class="list">
 							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-							<li><a href="#"><i class="fa fa-behance"></i></a></li>
+							<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 						</ul>
 					</aside>
 					<div class="copyright">
 						<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Developed by KJH Technologies</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 					</div>
 				</div>
