--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 	<header class="header_area">
 		<div class="main_menu">
 			<nav class="navbar navbar-expand-lg navbar-light">
+				<img src="img/maxlogo.png" style="margin-left:7vh;width:20vh"alt="">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
-					<a class="navbar-brand" href="index.html"><img src="img/maxlogo.png" style="width:20vh;"alt=""></a>
+					<a class="navbar-brand" href="index.html"><img src="img/logo.png" alt=""></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -40,31 +41,18 @@
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav justify-content-end">
 							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-							<li class="nav-item submenu dropdown">
-								<a class="nav-link" href="#">About</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="portfolio.html">Company Profile</a></li>
-									<li class="nav-item"><a class="nav-link" href="portfolio-details.html">FAQ</a>
-								</ul>
-							</li>
-							<li class="nav-item submenu dropdown">
-								<a class="nav-link" href="#">Services</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="portfolio.html">Cosmetics</a></li>
-									<li class="nav-item"><a class="nav-link" href="portfolio-details.html">Ingredients</a>
-									<li class="nav-item"><a class="nav-link" href="portfolio-details.html">Packaging</a>
-								</ul>
-							</li>
+							<li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li>
+							<li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+							<li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-								 aria-expanded="false">Free Quote</a>
+								 aria-expanded="false">Blog</a>
 								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="elements.html">Label Customizer</a>
-									<li class="nav-item"><a class="nav-link" href="elements.html">New Private Label Evaluation</a>
-									<li class="nav-item"><a class="nav-link" href="elements.html">Product formulation request</a>
+									<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+									<li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
 								</ul>
 							</li>
-							<li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 				</div>
@@ -118,8 +106,11 @@
 				<div class="col-lg-6 text-center">
 					<div class="main-title">
 						<h1>What We Do</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+						<p>	Max Private Label is a leading custom manufacturer specializing in premiere Hair care, Skin
+						care &amp; Personal care products. Our clients include retailers, spas, salons &amp; most digital
+						marketplaces also individuals who want to develop their own line of skin care or personal care
+						products.
+
 					</p>
 					</div>
 				</div>
@@ -294,7 +285,8 @@
 					<div class="copyright">
 						<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Developed by KJH Technologies</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+						</p>
 					</div>
 				</div>
 			</div>
