Keenan - I did a bunch of work tonight all thats left are the form pages. once they look the same as all others we can connect and we are DONE lets go

--- a/about-us.html
+++ b/about-us.html
@@ -41,6 +41,7 @@
 						<ul class="nav navbar-nav menu_nav justify-content-end">
 							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
 							<li class="nav-item active"><a class="nav-link" href="about-us.html">About</a></li>
+							<li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
 							<li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
 							<li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
 							<li class="nav-item submenu dropdown">
@@ -78,7 +79,7 @@
 						<h1>About us</h1>
 					</div>
 					<div align="left"class="mb-50 wow fadeIn" data-wow-duration=".8s">
-						<p>
+						<p style="font-size:1.75vh;color:#5c4f36;">
 	Max Private Label is a leading custom manufacturer specializing in premiere Hair care, Skin
 care &amp; Personal care products. Our clients include retailers, spas, salons &amp; most digital
 marketplaces also individuals who want to develop their own line of skin care or personal care
