--- a/products.html
+++ b/products.html
@@ -42,6 +42,7 @@
 						<ul class="nav navbar-nav menu_nav justify-content-end">
 							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
 							<li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li>
+							<li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
 							<li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
 							<li class="nav-item active"><a class="nav-link" href="products.html">Products</a></li>
 							<li class="nav-item submenu dropdown">
@@ -79,12 +80,14 @@
 				<div class="row">
 					<div class="main-title text-center">
 						<h1>Products</h1>
-						<h3 style="text-align:center;color:black;">MPL offers an array of the worlds best products, they provide solutions
+						<h3 style="text-align:center;color:darkgray;">MPL offers an array of the worlds best products, they provide solutions
 						no matter if its your hair, or your pets. Below you will find the vast selection we have to offer. </h3>
 
-					</div>				</div>
-				<h3 style="text-align:center;">Hair & Styling Care</h3>
-				<ul>
+					</div>
+				</div>
+				<div>
+				<h3 style="text-align:center;color:#9c8965">Hair & Styling Care</h3>
+				<ul style="color:#5c4f36;">
 				<li class="productList">Color protectant products</li>
 				<li class="productList">Conditioning shampoos including 2-in-1</li>
 				<li class="productList">Conditioners &amp; Detanglers</li>
@@ -111,85 +114,119 @@
 				<li class="productList">UV protectant products</li>
 				<li class="productList">Volumizing products</li>
 				<li class="productList">Wig Care Products</li>
-				<li class="productList">Kit Box&rsquo;s (Paper Board &amp; Corrugated)<spanle-converted-space>&nbsp; </span>( 1 Application, 2 Application, 4 Application, 6 Application, 12 application, 24 application)</li>
+				<li class="productList">Kit Box's</li>
 				</ul>
-				<h3 style="text-align:center;">How is Freight charged?</h3><p></h3><p>
-Freight is F.O.B. our manufacturing facilities in Chicago, IL.
-Shipping can be arranged by our shipping department or by your company.
-Our shipping department will contact freight companies for a competitive price for your shipment.</p>
-
-	<h3 style="text-align:center;">Does MPL Require Deposit for Order?</h3><p></h3><p>
-Yes. MPL requires a 50% non-refundable deposit on your order.
-Once we have received your deposit, our purchasing department will order raw materials for your product.
-The remaining balance is due once we have finished production and your order is ready to ship.
-We will calculate exactly how many pieces were made and factor in shipping into the remaining balance.</p>
-
-<h3 style="text-align:center;">Can I Ship my Packaging to MPL?</h3><p>
-Absolutely! When you order your packaging,
-we recommend having it shipped directly to MPL to avoid paying a double shipment fee.</p>
-
-<h3 style="text-align:center;">Does MPL Provide Labels?</h3><p>
-Yes, we have created great relationships with reliable label companies for short lead time and fast turn-around time.
-MPL can order labels on your behalf or refer you to a supplier.</p>
-
-<h3 style="text-align:center;">
-Does MPL provide Packaging?</h3><p>
-Yes, we have created great relationships with reliable packaging companies for short lead time and fast turn-around time.
-MPL can order packaging on your behalf or refer you to a supplier.</p>
-
-<h3 style="text-align:center;">Does MPL do animal testing?</h3><p>
-No. MPL does not do animal testing.
-We are proud to be a cruelty-free contract manufacturer and lab.</p>
-
-<h3 style="text-align:center;">
-What are the types fo stability testing you do?</h3><p>
-Upon product approval, the customer has the option of running a Package Stability and Compatibility Test.
-For MPL to guarantee the stability of the product, we require that this test be done with using the exact packaging that will be used to go to market.
-These tests will evaluate the product’s integrity and cohesion once introduced to the specific packaging which will be used by the customer. The Research and Development team will re-create the customer’s approved formula, exactly as it is approved, and will run six (seven) tests inside the exact packaging component which the customer chooses for his or her product.</p>
-
-<h3 style="text-align:center;">
-Are R&D deposits Refundable?</h3><p>
-
-No. R&D deposits cover the cost of time spent formulating your product, ordering samples for your formula, and creating bench samples.
-A significant portion of your R&D fees will be credited towards your first order.</p>
-
-<h3 style="text-align:center;">Do you offer facility tours?</h3><p>
-Yes! We enjoy meeting with customers face to face. We ask that you contact our offices to schedule a meeting to meet with our experts and see our facilities.</p>
-
-<h3 style="text-align:center;">Does MPL Formulate products for export?</h3><p>
-Yes. Each country has varying laws and guidelines for importing products. At MPL, we have created products for export to over 35 different countries. We will use our experience and knowledge to navigate the paperwork and certificates required for export.</p>
-
-<h3 style="text-align:center;">Does MPL Sign a Non-Disclosure agreement?</h3><p>(NDA)
-Yes. MPL will provide you with our NDA which protects the client (you) and manufacturer (MPL)</p>
-
-<h3 style="text-align:center;">Will I receive a copy of the approved formula?</h3><p>
-MPL maintains ownership of all formulations. However, we do enter into agreements to enable our customers to have exclusive use of specific formulations. We do not share formulations across customers.
-Complete formulas may be purchased from MPL Laboratories. Pricing is determined on a per-formula basis.</p>
-
-<h3 style="text-align:center;">Once I place my production order, when can I expect my product to ship?</h3><p>
-Once you have placed an order, we will send you an invoice for a 50% deposit.
-After we have received your deposit, our ordering department will begin to place orders for raw materials.
-Lead times of ingredients vary, depending on location of ingredient, whether or not the vendor has the ingredient in stock, and more. Sometimes ingredients can take up to 8 weeks to be shipped to our warehouse. We require that all components of packaging be sent to our warehouse prior to going into production. Once all ingredients and packaging components have been sent to our warehouse, we schedule your product for compounding and production. We ask that all MPL clients give a 4 week lead time before their product goes into production, allowing time for all ingredients to be shipped in. If it is possible for your product to go into production earlier, we will do so.</p>
-
-
-<h3 style="text-align:center;">What are your minimums for Custom Formulation?</h3><p>
-The minimum quantity is 5000 pieces for Custom formulation orders. The minimum quantity is 3500 pieces for Stock formulation orders.
-Sometimes we are able to accommodate smaller production runs but are limited by the type of product and the availability of raw materials.</p>
-
-<h3 style="text-align:center;">How Much will my product cost per unit?</h3><p>
-This answer is entirely up to you.
-Before beginning the R&D phase, we ask that you provide use with your cost per piece.
-The answer to this allows us to give a budget to our R&D team for your formula.
-Our R&D team will work backwards from there when deciding which ingredients and actives to put into your formula to fit your budget.</p>
-
-
-
-
-
-
-
-
-
+			</div>
+				<div>
+				<h3 style="text-align:center;color:#9c8965;margin-top:10vh;">Bath & Body Care</h3><p></h3><p>
+					<ul style="color:#5c4f36;">
+					<li class="productList">Anti-pollution &amp; Antioxidant products</li>
+					<li class="productList">Aromatherapy Products</li>
+					<li class="productList">Baby Products</li>
+					<li class="productList">Bath &amp; Shower Gels</li>
+					<li class="productList">Bath Salts &amp; Soaks</li>
+					<li class="productList">Body Butters, Creams, Gels</li>
+					<li class="productList">Body Mists &amp; Splashes</li>
+					<li class="productList">Body Scrubs</li>
+					<li class="productList">Body Washes</li>
+					<li class="productList">Botanical products</li>
+					<li class="productList">Bubble Baths</li>
+					<li class="productList">Cellulite &amp; Stretch Mark products</li>
+					<li class="productList">Colognes, Perfumes &amp; Toilet Waters</li>
+					<li class="productList">Exfoliation products</li>
+					<li class="productList">Firming &amp; Tightening Products</li>
+					<li class="productList">Foaming exfoliating products</li>
+					<li class="productList">Foot Care Products</li>
+					<li class="productList">Hand Care Products&nbsp;</li>
+					<li class="productList">Milk Baths</li>
+					<li class="productList">Moisturizers</li>
+					<li class="productList">Natural and Organic Products</li>
+					<li class="productList">Bath &amp; Body Oils</li>
+					<li class="productList">Body Balms</li>
+					<li class="productList">Salt &amp; Sugar Scrubs</li>
+					<li class="productList">Skin Repair &amp; Smoothing products</li>
+					<li class="productList">Skin Soothing products</li>
+					<li class="productList">Glittery Body Gels, Body Washes, &nbsp;Lotions &amp; Creams</li>
+					<li class="productList">Vitamin C Products, Roll-On Products</li>
+					<li class="productList">Vitamin E, A, or D products</li>
+					<li class="productList">Whipped Body Butters</li>
+					<li class="productList">Soaps</li>
+					</ul>
+				</div>
+				<div>
+				<h3 style="text-align:center;color:#9c8965;margin-top:10vh;">Men's Grooming</h3><p></h3><p>
+					<ul style="color:#5c4f36;">
+					<li class="productList">Aftershave lotions, gels, balms</li>
+					<li class="productList">Shaving creams &amp; gels</li>
+					<li class="productList">Beard &amp; facial cleansers</li>
+					<li class="productList">Beard balms, creams &amp; oils</li>
+					<li class="productList">Body Washes &amp; Cleansers</li>
+					<li class="productList">Moisturizers</li>
+					<li class="productList">Moustache wax</li>
+					<li class="productList">Men&rsquo;s hair products</li>
+					<li class="productList">Men&rsquo;s hair styling products</li>
+					<li class="productList">Pre-shave oils</li>
+					<li class="productList">Soothing &amp; Cooling products</li>
+					<li class="productList">See Hair Care for other products</li>
+					</ul>
+				<div>
+				<h3 style="text-align:center;color:#9c8965;margin-top:10vh;">Facial & Skin Care</h3><p></h3><p>
+					<ul style="color:#5c4f36;">
+					<li class="productList">Anti-Aging/Anti-Wrinkle products</li>
+					<li class="productList">Anti-Reddening products</li>
+					<li class="productList">Anti-Pollution &amp; Antioxidant products</li>
+					<li class="productList">Brightening Products</li>
+					<li class="productList">Cleansing Creams</li>
+					<li class="productList">Creamy Cleansers</li>
+					<li class="productList">Eye Treatment Products</li>
+					<li class="productList">Facial Masks, Gels, &amp; Scrubs</li>
+					<li class="productList">Firming &amp; Tightening Products</li>
+					<li class="productList">Gel Creams</li>
+					<li class="productList">Gentle Cleansers</li>
+					<li class="productList">Lip balms</li>
+					<li class="productList">Lip plumping products</li>
+					<li class="productList">Milk Cleansers</li>
+					<li class="productList">Moisturizers</li>
+					<li class="productList">Oils</li>
+					<li class="productList">Salt &amp; Sugar Scrubs</li>
+					<li class="productList">Serums &amp; Treatment products</li>
+					<li class="productList">Toners</li>
+					<li class="productList">Vitamin C Products</li>
+					<li class="productList">Vitamin E, A, or D products</li>
+					<li class="productList">Acne Treatment</li>
+					</ul>
+				</div>
+				<div>
+				<h3 style="text-align:center;color:#9c8965;margin-top:10vh;">Pet Care</h3><p></h3><p>
+					<ul style="color:#5c4f36;">
+						<li class="productList">Soothing Products</li>
+						<li class="productList">Balms &amp; ointments</li>
+						<li class="productList">Coat Conditioners &amp; Detanglers</li>
+						<li class="productList">Oatmeal products</li>
+						<li class="productList">Coat Shine Products</li>
+						<li class="productList">Deodorant sprays (for pet and/or carpet)</li>
+						<li class="productList">Dry Skin Products</li>
+						<li class="productList">Refreshing/ scented sprays</li>
+						<li class="productList">Shampoos- All Types including sulfate free</li>
+						</ul>
+					</div>
+				<div>
+				<h3 style="text-align:center;color:#9c8965;margin-top:10vh;">Baby Care</h3><p></h3><p>
+					<ul style="color:#5c4f36;">
+						<li class="productList">Baby Wash</li>
+						<li class="productList">Body Wash</li>
+						<li class="productList">Shampoo</li>
+						<li class="productList">Conditioner. Tear-Free, Hypoallergenic</li>
+						<li class="productList">Daily</li>
+						<li class="productList">Moisture Baby Lotion</li>
+						<li class="productList">Skin Cream</li>
+						<li class="productList">Petrolium Jelly</li>
+						<li class="productList">Powder</li>
+						<li class="productList">Rash Cream</li>
+						<li class="productList">Bubble Bath</li>
+						</ul>
+				</div>
+				<div>
 			</div>
 		</div>
 	</section>
