--- a/FAQ.html
+++ b/FAQ.html
@@ -42,6 +42,7 @@
 						<ul class="nav navbar-nav menu_nav justify-content-end">
 							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
 							<li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li>
+							<li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
 							<li class="nav-item active"><a class="nav-link" href="faq.html">FAQ</a></li>
 							<li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
 							<li class="nav-item submenu dropdown">
