--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 						<ul class="nav navbar-nav menu_nav justify-content-end">
 							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
 							<li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li>
+							<li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
 							<li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
 							<li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
 							<li class="nav-item submenu dropdown">
@@ -68,30 +69,7 @@
 				<div class="row fullscreen d-flex align-items-center">
 					<div class="banner-content col-lg-12 justify-content-center">
 						<h1>Max Private Label </h1>
-						<h3>LOREN IPSUM</h3>
-						<a href="#" class="primary-btn">Hire Me</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="single_slide_banner slide_bg1">
-			<div class="container">
-				<div class="row fullscreen d-flex align-items-center">
-					<div class="banner-content col-lg-12 justify-content-center">
-						<h1>Max Private Label </h1>
-						<h3>LOREN IPSUM</h3>
-						<a href="#" class="primary-btn">Hire Me</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="single_slide_banner slide_bg1">
-			<div class="container">
-				<div class="row fullscreen d-flex align-items-center">
-					<div class="banner-content col-lg-12 justify-content-center">
-						<h1>Max Private Label </h1>
-						<h3>LOREN IPSUM</h3>
-						<a href="#" class="primary-btn">Hire Me</a>
+						<a href="about-us.html" class="primary-btn">Find Out More</a>
 					</div>
 				</div>
 			</div>
@@ -199,30 +177,6 @@
 		</section>
 		<!--================ End of Service Area =================-->
 
-	<!--================ Start About Area =================-->
-	<section class="about-area section_gap gray-bg">
-		<div class="container">
-			<div class="row align-items-center justify-content-between">
-				<div class="col-lg-5 about-left">
-					<img class="img-fluid" src="img/bottle-brand-green-1324434.jpg" alt="">
-				</div>
-				<div class="col-lg-6 col-md-12 about-right">
-					<div class="main-title text-left">
-						<h1>About Max Private Label</h1>
-					</div>
-					<div class="mb-50 wow fadeIn" data-wow-duration=".8s">
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Malesuada fames ac turpis egestas maecenas pharetra convallis. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique. Tellus integer feugiat scelerisque varius. In ornare quam viverra orci sagittis eu volutpat odio. Magnis dis parturient montes nascetur. Cursus sit amet dictum sit amet justo donec. Eget arcu dictum varius duis at consectetur lorem donec. Sed velit dignissim sodales ut. Lacus viverra vitae congue eu consequat ac felis donec.
-						</p>
-						<p>Lorem mollis aliquam ut porttitor. Semper risus in hendrerit gravida rutrum. Amet purus gravida quis blandit turpis. Hac habitasse platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Pellentesque habitant morbi tristique senectus et netus et malesuada. Quis lectus nulla at volutpat diam ut venenatis tellus in. Nibh mauris cursus mattis molestie a. Consectetur adipiscing elit ut aliquam purus sit. Orci ac auctor augue mauris. Justo donec enim diam vulputate ut pharetra. Praesent elementum facilisis leo vel fringilla. Proin sed libero enim sed faucibus turpis. Nunc scelerisque viverra mauris in aliquam sem fringilla ut morbi. Tellus cras adipiscing enim eu turpis egestas pretium. Cursus eget nunc scelerisque viverra mauris in aliquam sem.
-						</p>
-					</div>
-					<a href="about.html" class="primary-btn">More Info</a>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--================ End About Area =================-->
 
 	<!--================ Start Newsletter Area =================-->
 	<section class="section_gap newsletter-area">
@@ -231,7 +185,6 @@
 				<div class="col-lg-6 text-center">
 					<div class="main-title">
 						<h1>Would you like to stay in touch? Go ahead and enter your email!</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Malesuada fames ac turpis egestas maecenas pharetra convallis. </p>
 					</div>
 				</div>
 			</div>
