--- a/faqupdated.html
+++ b/faqupdated.html
@@ -45,8 +45,7 @@
 							<li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
 							<li class="nav-item active"><a class="nav-link" href="faq.html">FAQ</a></li>
 							<li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
-							<li class="nav-item submenu dropdown">
-							</li>
+							<li class="nav-item"><a class="nav-link" href="forms.html">Forms</a></li>
 							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 						</ul>
 					</div>
