--- a/forms.html
+++ b/forms.html
@@ -1,12 +1,83 @@
 <<!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Forms</title>
-  </head>
-  <h1>Product Formulation form and LabelCustomizer form below.</h1>
+<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="icon" href="img/favicon.png" type="image/png">
+	<title>Form</title>
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="vendors/linericon/style.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/magnific-popup.css">
+	<link rel="stylesheet" href="vendors/nice-select/css/nice-select.css">
+	<link rel="stylesheet" href="vendors/animate-css/animate.css">
+	<link rel="stylesheet" href="vendors/flaticon/flaticon.css">
+	<link rel="stylesheet" href="css/style.css">
+	<!-- main css -->
+	<link rel="stylesheet" href="css/style-New.css">
+</head>
+  <header class="header_area">
+          <div class="main_menu">
+              <nav class="navbar navbar-expand-lg navbar-light">
+                  <img src="img/maxlogo.png" style="margin-left:7vh;width:20vh"alt="">
+                  <div class="container">
+                      <!-- Brand and toggle get grouped for better mobile display -->
+                      <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt=""></a>
+                      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                      </button>
+                      <!-- Collect the nav links, forms, and other content for toggling -->
+                      <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+                          <ul class="nav navbar-nav menu_nav justify-content-end">
+                              <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                              <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li>
+                              <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                              <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+                              <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
+                              <li class="nav-item active"><a class="nav-link" href="forms.html">Forms</a></li>
+                              <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                          </ul>
+                      </div>
+                  </div>
+              </nav>
+          </div>
+  </header>
   <body>
-    <li class="nav-item"><a class="nav-link" href="forms.html">Forms</a><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfoWGO9X7NPkukLi2Q-S9WuuCsnXhA451ef167PMMKhNgSWGw/viewform?embedded=true" width="640" height="3156" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></li>
-    <li class="nav-item"><a class="nav-link" href="forms.html">Forms</a><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfoWGO9X7NPkukLi2Q-S9WuuCsnXhA451ef167PMMKhNgSWGw/viewform?embedded=true" width="640" height="3156" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></li>
-  </body>
+    <li style="margin-top:10vh;"</a><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfoWGO9X7NPkukLi2Q-S9WuuCsnXhA451ef167PMMKhNgSWGw/viewform?embedded=true" width="640" height="3156" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></li>
+    <!--================ Start Footer Area =================-->
+ 	<footer class="footer_area section_gap">
+ 		<div class="container">
+ 			<div class="row footer_inner justify-content-center">
+ 				<div class="col-lg-6 text-center">
+ 					<aside class="f_widget social_widget">
+ 						<div class="f_logo">
+ 							<img src="img/maxlogo.png" style="width:20vh"alt="">
+ 						</div>
+ 						<div class="f_title">
+ 							<h4>Follow Us</h4>
+ 						</div>
+ 						<ul class="list">
+ 							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+ 							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+ 							<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+ 						</ul>
+ 					</aside>
+ 					<div class="copyright">
+ 						<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Developed by KJH Technologies</a>
+ <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+ 						</p>
+ 					</div>
+ 				</div>
+ 			</div>
+ 		</div>
+ 	</footer>
+ 	<!--================End Footer Area =================-->
+ </body>
 </html>
