--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav justify-content-end">
-								<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+								<li class="nav-item  active"><a class="nav-link" href="index.html">Home</a></li>
 								<li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li>
 								<li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-								<li class="nav-item active"><a class="nav-link" href="faq.html">FAQ</a></li>
+								<li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
 								<li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
 								<li class="nav-item"><a class="nav-link" href="forms.html">Forms</a></li>
 								<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
